--- a/index3.html
+++ b/index3.html
@@ -13,8 +13,9 @@
   <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
+  <link rel="stylesheet" href="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.css" />
   <link rel="stylesheet" type="text/css" href="css/dc.css"/>
-  <!-- <link rel="stylesheet" type="text/css" href="css/d3.css"/> -->
+  
 
   <style type="text/css">
 
@@ -41,6 +42,10 @@
 	  
     .mapButton {
       height: 50px;
+    }
+
+    .emailbutton {
+      height: 48px;
     }
 
     .bg {
@@ -104,6 +109,30 @@
     width: 282px;
     }
 
+    svg {
+        display: block;
+    }
+
+    html, body, #chart1, svg {
+        margin: 0px;
+        padding: 0px;
+        width: 100%;
+        height: 100%;
+    }
+
+    #picImg {
+      height: 400px;
+      width: 800px;
+    }
+
+    .cartodb-logo {
+    opacity: 0;
+    }
+
+    .notes {
+    margin-left: 20px;      
+    }
+
   </style>
 
   <style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 80%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}
@@ -122,16 +151,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">NYC Graffiti Complaints</a>
+        <a class="navbar-brand mybutton" href="#top">NYC Graffiti Complaints</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#about">About<span class="sr-only">(current)</span></a></li>
-         <!--  <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects<span class="caret"></span></a> -->
-         <!--    <ul class="dropdown-menu">
+<!--           <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects<span class="caret"></span></a>
+            <ul class="dropdown-menu">
               <li><a href="#complaintsbyzip">Complaints by Zip</a></li>
               <li><a href="#">Neighborhood Tool</a></li>
               <li><a href="#">Something else here</a></li>
@@ -139,9 +168,22 @@
               <li><a href="https://db.tt/yoFH3baF", target="_blank">Neighborhood Planning Tool</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="https://github.com/zhoujh30/PUI2015_jzhou/blob/master/Final/PUI2015_final_JianhaoZhou.ipynb", target="_blank">Asthma Factor Study</a></li>
-            </ul> -->
-          <!-- </li> -->
-          <li><a href="#complaintsbyzip">Choropleth</a></li>
+            </ul>
+          </li> -->
+          <li><a href="#charts">Charts</a></li>
+          <!-- <li><a href="#complaintsbyzip">Choropleth</a></li> -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Choropleth<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#byzip">By Zip Code</a></li>
+              <li><a href="#bynta">By Neighborhood Tabulation Area</a></li>
+              <!-- <li><a href="#">Something else here</a></li> -->
+              <!-- <li role="separator" class="divider"></li>
+              <li><a href="https://db.tt/yoFH3baF", target="_blank">Neighborhood Planning Tool</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="https://github.com/zhoujh30/PUI2015_jzhou/blob/master/Final/PUI2015_final_JianhaoZhou.ipynb", target="_blank">Asthma Factor Study</a></li> -->
+            </ul>
+          </li>
           <li><a href="#TimeSeries">Time Series</a></li>
         </ul>
        <!--  <form class="navbar-form navbar-left" role="search">
@@ -151,9 +193,7 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form> -->
         <ul class="nav navbar-nav navbar-right">
-          <!-- <a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" id="about-btn"><i class="fa fa-question-circle white"></i>&nbsp;&nbsp;About</a> -->
-
-          <!-- <li><a href="#" data-toggle="modal" data-target="#myModal">Contact Me</a></li> -->
+          <li><a href="" data-toggle="modal" data-target="#myModal">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -167,11 +207,40 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Contact Me</h4>
+          <h4 class="modal-title">Contact</h4>
         </div>
         <div class="modal-body">
-
-          <p>felix.zhou@nyu.edu</p>
+            <!-- <form id="contact-form">
+              <div class="well well-sm">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label for="first-name">First Name:</label>
+                      <input type="text" class="form-control" id="first-name">
+                    </div>
+                    <div class="form-group">
+                      <label for="last-name">Last Name:</label>
+                      <input type="text" class="form-control" id="last-email">
+                    </div>
+                    <div class="form-group">
+                      <label for="email">Email:</label>
+                      <input type="text" class="form-control" id="email">
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <label for="message">Message:</label>
+                    <textarea class="form-control" rows="8" id="message"></textarea>
+                  </div>
+                  <div class="col-md-12">
+                    <p>
+                      <button type="submit" class="btn btn-primary pull-right" data-dismiss="modal">Submit</button>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </form> -->
+          
+          For any inquiries, email me at <a class="btn btn-primary emailbutton" role="button" href="mailto:felix.zhou@nyu.edu">felix.zhou@nyu.edu</a>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -182,7 +251,7 @@
   </div>
 
   <div class="bg"></div>
-  <div class="jumbotron" id='totop'>
+  <div class="jumbotron" id='top'>
     <h1 class='googlefont1'>Welcome</h1>
     <p class='googlefont1'>NYC Graffiti Complaints Visualization</p>
     <p><a class="btn btn-primary btn-lg" href="#about" role="button"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Learn more</a></p>
@@ -198,41 +267,62 @@
         The <a href="http://www.nycedc.com/program/graffiti-free-nyc", target="_blank">Graffiti-free NYC Program</a> is the first full-time, street-by-street graffiti removal service initiated by <a href="http://www.nycedc.com", target="_blank">NYCEDC</a> in 1999 in the City of New York. The objectives of Graffiti-Free NYC are to provide no-cost graffiti removal for the City, to create jobs for low-to-moderate income residents, and to enhance overall neighborhood aesthetics.
         </br>
         </br>
-        This site takes the advantage of 311 graffiti service requests data from 01/01/2010 to 03/15/2016 from <a href="https://nycopendata.socrata.com/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9", target="_blank">NYC Open Data</a> and provides a visualization of graffiti complaints.
+        <img src="data/pic.jpg" class="img-rounded" id='picImg'>
+        </br>
+        </br>
+        This site takes the advantage of 311 graffiti service requests data from 01/01/2010 to 03/20/2016 from <a href="https://nycopendata.socrata.com/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9", target="_blank">NYC Open Data</a> and provides a visualization of graffiti complaints.
       </p>
     </div>
   </div>
   </br>
   </br>
-  </br>
 
   <div class="row">
-    <div class="col-md-3" id='complaintsbyzip'>
+    <div class="col-md-3" id='charts'>
       <h1>Charts</h1>
     </div>
     <div class="container",class="col-md-9">
       </br>
+      <div class="container",class="col-md-9">
+      </br>
+      <p class="col-md-9">The Best for NYC Challenge is a free, online tool to help you compare your business's impact on NYC workers, communities, and the environment against 8,000+ businesses and provides free resources to improve. Here is a map of all participant companies.</p>
+    </div>
+  </div>
+    
+  <div class="row">
+    <div class="col-md-3">
+      </br></br></br></br><h5 class='notes'>Click to filter</h5>
+    </div>
+    <div class="container",class="col-md-9">
       <div id="quarter-chart">
-          <strong>Quarters</strong>
-          <a class="reset" href="javascript:quarterChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-          <div class="clearfix"></div>
+        </br></br>
+        <strong>Quarters</strong>
+        <a class="reset" href="javascript:quarterChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <div class="clearfix"></div>
       </div>
+      </br></br>
       <div id="day-of-week-chart">
           <strong>Day of Week</strong>
           <a class="reset" href="javascript:dayOfWeekChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
           <div class="clearfix"></div>
       </div>
-      <div id="fluctuation-chart">
-          <strong>Days by Fluctuation(%)</strong>
-          <span class="reset" style="display: none;">range: <span class="filter"></span></span>
-          <a class="reset" href="javascript:fluctuationChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-          <div class="clearfix"></div>
-      </div>
+      <!-- <div id="chart1">
+        <svg></svg>
+      </div>      -->
     </div>
   </div>
 
   <div class="row">
-    <div class="col-md-3" id='complaintsbyzip'>
+      <div class="col-md-3" id='charts'>
+        </br></br></br></br><h5 class='notes'>Select a time range to zoom in</h5>
+      </div> 
+      <div id="monthly-volume-chart", class="col-md-9 container">
+        <strong>Monthly Number of Graffiti Complaints</strong>
+      </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3" id='byzip'>
       <h1>Choropleth</h1>
     </div>
     <div class="container",class="col-md-9">
@@ -245,8 +335,8 @@
   <div class="row">
     <div class="col-md-3">
       <div class="btn-group-vertical" role="group" aria-label="...">
-          <!-- <h5>Change Map Style Here:</h5></br>
-          <button id="one" type="button" class="btn btn-success mapButton">Default</button></br>
+          <h5 class='notes'>By Zip Code </br></br>(Please hover over a zip code)</h5></br>
+       <!--    <button id="one" type="button" class="btn btn-success mapButton">Default</button></br>
           <button id="two" type="button" class="btn btn-primary mapButton">Thunderforest</button></br>
           <button id="three" type="button" class="btn btn-danger mapButton">Watercolor</button> -->
       </div>
@@ -259,11 +349,22 @@
   </br>
   </br>
 
+
+  <div class="row">
+    <div class="col-md-3" id='bynta'>
+      <h1>Choropleth</h1>
+    </div>
+    <div class="container",class="col-md-9">
+      </br>
+      <p class="col-md-9">The Best for NYC Challenge is a free, online tool to help you compare your business's impact on NYC workers, communities, and the environment against 8,000+ businesses and provides free resources to improve. Here is a map of all participant companies.</p>
+    </div>
+  </div>
+  </br>
   <div class="row">
     <div class="col-md-3">
-     <!--  <div class="btn-group-vertical" role="group" aria-label="...">
-          <h5>Change Map Style Here:</h5></br>
-      </div> -->
+      <div class="btn-group-vertical" role="group" aria-label="...">
+          <h5 class='notes'>By Neighborhood Tabulation Area</br></br>(Please click a neighborhood)</h5></br>
+      </div>
     </div>
     <div class="container",class="col-md-9">
       <!-- <div class="embed-container"><small><a href="//felixzhou.maps.arcgis.com/apps/Embed/index.html?webmap=f2754acb8f7f4d8b813d89db9f9fae20&amp;extent=-74.5982,40.4033,-73.2963,41.033&amp;zoom=true&amp;scale=true&amp;search=true&amp;searchextent=true&amp;legend=true&amp;basemap_gallery=true&amp;disable_scroll=true&amp;theme=light" style="color:#0000FF;text-align:left" target="_blank">View larger map</a></small><br><iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="GraffitiByZip" src="//felixzhou.maps.arcgis.com/apps/Embed/index.html?webmap=f2754acb8f7f4d8b813d89db9f9fae20&amp;extent=-74.5982,40.4033,-73.2963,41.033&amp;zoom=true&amp;scale=true&amp;search=true&amp;searchextent=true&amp;legend=true&amp;basemap_gallery=true&amp;disable_scroll=true&amp;theme=light"></iframe></div> -->
@@ -289,7 +390,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="btn-group-vertical" role="group" aria-label="...">
-          <h5>Change Map Style Here:</h5></br>
+          <h5 class='notes'>Change Map Style Here:</h5></br>
       </div>
     </div>
     <div class="container",class="col-md-9">
@@ -332,10 +433,12 @@
   <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/d3.js"></script>
+  <script src="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.js"></script>
   <script type="text/javascript" src="js/crossfilter.js"></script>
   <script type="text/javascript" src="js/dc.js"></script>
   <script type="text/javascript" src="js/colorbrewer.js"></script>
   <script src="js/javascript.js"></script> 
+  <!-- <script src="js/charts1.js"></script>  -->
   <script src="js/charts.js"></script> 
 
   
@@ -395,19 +498,30 @@
     });
 
 	 
-    $(document).ready(function() {
-      $('a[href^="#"]').click(function() {
-          var target = $(this.hash);
-          if (target.length == 0) target = $('a[name="' + this.hash.substr(1) + '"]');
-          if (target.length == 0) target = $('html');
-          $('html, body').animate({ scrollTop: target.offset().top-55 }, 400);
-          return false;
-      });
-    });
 
-
-
-  
+    function scroll_if_anchor(href) {
+        href = typeof(href) == "string" ? href : $(this).attr("href");      
+        // You could easily calculate this dynamically if you prefer
+        var fromTop = 50;
+        // If our Href points to a valid, non-empty anchor, and is on the same page (e.g. #foo)
+        // Legacy jQuery and IE7 may have issues: http://stackoverflow.com/q/1593174
+        if(href.indexOf("#") == 0) {
+            var $target = $(href);
+            // Older browser without pushState might flicker here, as they momentarily
+            // jump to the wrong position (IE < 10)
+            if($target.length) {
+                $('html, body').animate({ scrollTop: $target.offset().top - fromTop });
+                if(history && "pushState" in history) {
+                    history.pushState({}, document.title, window.location.pathname + href);
+                    return false;
+                }
+            }
+        }
+    }    
+    // When our page loads, check to see if it contains and anchor
+    scroll_if_anchor(window.location.hash);
+    // Intercept all anchor clicks
+    $("body").on("click", "a", scroll_if_anchor);
 
 
   </script>
