--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
   <script type="text/javascript" src="js/colorbrewer.js"></script>
   <script src="js/javascript.js"></script> 
   <!-- <script src="js/charts1.js"></script>  -->
-  <script src="charts.js"></script> 
+  <script src="js/charts.js"></script> 
 
   
   <script type="text/javascript">
