--- a/index.html
+++ b/index.html
@@ -271,8 +271,7 @@
         <img src="data/pic.jpg" class="img-rounded" id='picImg'>
         </br>
         </br>
-        This site takes the advantage of 311 graffiti service requests data from 01/01/2010 to 12/31/2015 from <a href="https://nycopendata.socrata.com/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9", target="_blank">NYC Open Data</a> and provides a visualization of graffiti complaints.
-      </p>
+        This site takes the advantage of 311 graffiti service requests data from 01/01/2010 to 12/31/2015 from <a href="https://nycopendata.socrata.com/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9", target="_blank">NYC Open Data</a> and provides a visualization of graffiti complaints using <a href="http://leafletjs.com/", target="_blank">Leaflet</a>, <a href="https://www.arcgis.com/", target="_blank">ArcGIS</a>, <a href="https://cartodb.com/", target="_blank">CartoDB</a>, <a href="http://getbootstrap.com/", target="_blank">Bootstrap</a>, and <a href="http://dc-js.github.io/dc.js/", target="_blank">dc.js</a>.</p>
     </div>
   </div>
   </br>
