--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
     }
 
     .jumbotron {
+      width: 100%;
       height: 690px;
       padding-top: 268px;
-      padding-left: 85px;
+      padding-left: 135px;
       color: white;
       text-shadow: #444 0 5px 5px;
       background: transparent;
