fix the description

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     </div>
     <div class="container",class="col-md-9">
       </br>
-      <p class="col-md-9">The Best for NYC Challenge is a free, online tool to help you compare your business's impact on NYC workers, communities, and the environment against 8,000+ businesses and provides free resources to improve. Here is a map of all participant companies.</p>
+      <p class="col-md-9"></p>
     </div>
   </div>
   </br>
@@ -372,7 +372,7 @@
     </div>
     <div class="container",class="col-md-9">
       </br>
-      <p class="col-md-9">The Best for NYC Challenge is a free, online tool to help you compare your business's impact on NYC workers, communities, and the environment against 8,000+ businesses and provides free resources to improve. Here is a map of all participant companies.</p>
+      <p class="col-md-9"></p>
     </div>
   </div>
   </br>
@@ -398,7 +398,7 @@
     </div>
     <div class="container",class="col-md-9">
       </br>
-      <p class="col-md-9">The Best for NYC Challenge is a free, online tool to help you compare your business's impact on NYC workers, communities, and the environment against 8,000+ businesses and provides free resources to improve. Here is a map of all participant companies.</p>
+      <p class="col-md-9"></p>
     </div>
   </div>
   </br>
