--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     </div>
     <div class="container",class="col-md-9">
       </br>
-      <p class="col-md-9"></p>
+      <p class="col-md-9">The graffiti complaints map by zip code share similar pattern with map by neighborhood tabulation area.</p>
     </div>
   </div>
   </br>
@@ -393,7 +393,7 @@
     </div>
     <div class="container",class="col-md-9">
       </br>
-      <p class="col-md-9"></p>
+      <p class="col-md-9">The time series map captures created dates of each graffiti complaint from January 2010 to March 2016. It shows similar city-wide pattern as Choropleth maps above but with seasonal fluctuations.</p>
     </div>
   </div>
   </br>
