--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
   <div class="row">
     <div class="col-md-3">
-      </br></br></br></br><h5 class='notes'>(Click to filter)</h5>
+      </br></br><h5 class='notes'>(Click to filter)</h5>
     </div>
     <div class="col-md-9">
       <div id="cleanby-chart">
@@ -216,25 +216,17 @@
         <div class="clearfix"></div>
       </div>
 
-<!--       <div id="status-chart">
-      </br></br>
-          <strong>Status</strong>
-          <a class="reset" href="javascript:statusChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-          <div class="clearfix"></div>
-      </div> -->
-
     </div>
   </div>
 
-<!--   <div class="row">
+  <div class="row">
       <div class="col-md-3" id='charts'>
-        </br></br></br></br><h5 class='notes'>(Select a time range to zoom in)</h5>
+        </br></br></br></br><h5 class='notes'></h5>
       </div> 
-      <div id="open-close-chart", class="col-md-9"></br></br>
+      <div id="openCloseTime-chart", class="col-md-9"></br></br>
         <strong>Open and Closed Graffiti Complaints</strong>
       </div>
   </div>
-  </br></br>   -->
 
   <div class="row">
       <div class="col-md-3" id='charts'>
