--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                 </div>
               </div>
             </form> -->
-          For any inquiries, email me at <a class="btn btn-primary emailbutton" role="button" href="mailto:felix.zhou@nyu.edu">felix.zhou@nyu.edu</a>
+          For any inquiries, email me at <a class="btn btn-primary emailbutton" role="button" href="mailto:felix.zhou@nyu.edu", target="_blank">felix.zhou@nyu.edu</a></br></br>
+          For more information, visit my site <a class="btn btn-primary emailbutton" role="button" href="http://www.jianhaozhou.net", target="_blank">www.jianhaozhou.net</a>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
