--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#about">About<span class="sr-only">(current)</span></a></li>
           </li> -->
-          <li><a href="#charts">Charts</a></li>
+<!--           <li><a href="#charts">Charts</a></li>
           <li><a href="#nta">Choropleth</a></li>
-      <!--     <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Choropleth<span class="caret"></span></a>
+          <li><a href="#TimeSeries">Time Series</a></li> -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Analysis<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#nta">By Neighborhood Tabulation Area</a></li>
-              <li><a href="#zip">By Zip Code</a></li>
+              <li><a href="#charts">Charts</a></li>
+              <li><a href="#nta">Choropleth</a></li>
+              <li><a href="#TimeSeries">Time Series</a></li>
             </ul>
-          </li> -->
-          <li><a href="#TimeSeries">Time Series</a></li>
+          </li>
         </ul>
        <!--  <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
@@ -106,8 +107,7 @@
                 </div>
               </div>
             </form> -->
-          For any inquiries, email me at <a class="btn btn-primary emailbutton" role="button" href="mailto:felix.zhou@nyu.edu">felix.zhou@nyu.edu</a></br></br>
-          For more information, visit my site <a class="btn btn-primary emailbutton" role="button" href="http://www.jianhaozhou.net", target="_blank">www.jianhaozhou.net</a>
+          For any inquiries, email us at <a class="btn btn-primary emailbutton" role="button" href="mailto:fzhou@edc.nyc">fzhou@edc.nyc</a> or check out our <a class="btn btn-primary emailbutton" role="button" href="https://github.com/zhoujh30/GraffitiFreeNYC/tree/gh-pages", target="_blank">Github</a>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
