--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top" style="height: 60px;">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -53,6 +53,8 @@
               <li><a href="#TimeSeries">Time Series</a></li>
             </ul>
           </li>
+          <li><a href="#ResponseTime">Response Time</a></li>
+          <li><a href="" data-toggle="modal" data-target="#myModal">Contact</a></li>
         </ul>
        <!--  <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
@@ -61,7 +63,7 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form> -->
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="" data-toggle="modal" data-target="#myModal">Contact</a></li>
+          <li><a href="https://github.com/zhoujh30/GraffitiFreeNYC/tree/gh-pages", target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -107,7 +109,7 @@
                 </div>
               </div>
             </form> -->
-          For any inquiries, email us at <a class="btn btn-primary emailbutton" role="button" href="mailto:fzhou@edc.nyc">fzhou@edc.nyc</a> or check out our <a class="btn btn-primary emailbutton" role="button" href="https://github.com/zhoujh30/GraffitiFreeNYC/tree/gh-pages", target="_blank">Github</a>
+          For any inquiries, email us at <a href="mailto:fzhou@edc.nyc">fzhou@edc.nyc</a>.
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
